--- a/styles/style.css
+++ b/styles/style.css
@@ -130,13 +130,102 @@ font-weight: 700;
  
 }
 .popular-img{
-    border-radius: 16px;
-background: url('../Images/Rectangle\ 4.png'), lightgray 50% / cover no-repeat;
-width: 600px;
+    width: 540px;
 height: 550px;
+    border-radius: 16px; 
+}
+/* choese your destinaition */
+.yours-destination{
+    max-width: 1170px;
+    margin: 0 auto;  
+    margin-top: 116px;
+    }
+.yours-contain{
+    text-align: center;
+}
+.img-row{
+    display: flex;
+    gap: 20px;
+}
+.img-one{
+    width: 573px;
+    height: 300px; 
+    border-radius: 16px;
+background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 5.png'), lightgray 50% / cover no-repeat;
+}
+.img-2{
+    width: 573px;
+    height: 300px;  
+    border-radius: 16px;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 8.png'), lightgray -101px -108.075px / 135.253% 172.05% no-repeat; 
+}
+.city{
+    color: #FFF;
+    text-align: center;
+    font-size: 28px;
+    font-weight: 800;
+    padding-top: 132px;
+}
+.img-row-two{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 24px;
+    margin-top: 24px;
+}
+.img-3{
+    width: 374px;
+height: 286px;
+border-radius: 16px;
+background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 6.png '), lightgray 50% / cover no-repeat;
+}
+.img-4{
+    width: 474px;
+height: 286px;
+border-radius: 16px;
+background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 7.png '), lightgray 50% / cover no-repeat;
+}
+.img-5{
+    width: 274px;
+height: 286px;
+border-radius: 16px;
+background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 9.png '), lightgray 50% / cover no-repeat;
+}
+.img-row-three{
+    display: flex;
+    gap: 24px;
+    margin-top: 24px;
+}
+.img-6{
+    width: 473px;
+height: 300px;
+border-radius: 16px;
+background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 11.png'), lightgray 50% / cover no-repeat;
+}
+.img-7{
+    width: 673px;
+height: 300px;
+border-radius: 16px;
+background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 10.png'), lightgray 50% / cover no-repeat;
+}
+/* why chose us */
+.why-chose-us{
+    max-width: 1170px;
+    margin: 0 auto;  
+    margin-top: 116px;
+}
+.why-contain{
+    text-align: center;
+}
+.contain-item-one{
+    width: 573px;
+    height: 284px; 
+    border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+}
+.contain-item-two{
 
 }
-
 
 
 
@@ -172,4 +261,26 @@ height: 550px;
    gap: 16px; 
    
    }
+   .our-popular{
+    display: flex;
+    flex-direction: column;
+   }
+   /* chose your destination */
+   .img-row , .img-row-three{
+    flex-direction: column;
+   
+    background-repeat: no-repeat
+}
+.img-row-two{
+grid-template-columns: 1fr;
+
+background-repeat: no-repeat;
+}
+.img-3 , .img-4 , .img-5 , .img-6{
+    width:100%;
+height: 176px;
+background-repeat: no-repeat;
+}
+   
+
 }
