--- a/styles/style.css
+++ b/styles/style.css
@@ -213,19 +213,61 @@ background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.
     margin: 0 auto;  
     margin-top: 116px;
 }
+.why-items-container{
+    display: flex;
+    gap: 24px;
+    margin-top: 32px;
+}
 .why-contain{
     text-align: center;
+  
 }
 .contain-item-one{
     width: 573px;
     height: 284px; 
+    padding-left: 32px;
     border-radius: 16px;
 border: 1px solid rgba(251, 181, 99, 0.20);
 background: rgba(251, 181, 99, 0.05);
 }
 .contain-item-two{
-
+    width: 573px;
+    height: 284px;
+    padding-left: 32px;
+    border-radius: 16px;
+border: 1px solid rgba(41, 206, 246, 0.20);
+background: rgba(41, 206, 246, 0.05);
 }
+.why-items-container-two{
+   margin-top: 24px;
+   margin-right: auto;
+   margin-left: auto;
+   align-items: center;
+   
+}
+.contain-item-three{
+    
+    width: 573px;
+    height: 284px; 
+    padding-left: 32px;
+    border-radius: 16px;
+border: 1px solid rgba(233, 68, 68, 0.20);
+background: rgba(233, 68, 68, 0.05); 
+}
+h1{
+    color: #131318; 
+    font-size: 40px;
+    font-weight: 800;
+}
+.why-tittle{
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+
+
+
 
 
 
@@ -252,9 +294,7 @@ background: rgba(251, 181, 99, 0.05);
    .nav-tittle{
     font-size: 20px;
    }
-   
-   
-   .explore-input-items{
+    .explore-input-items{
     display: flex;
    width: 287px;
    flex-direction: column;
@@ -281,6 +321,16 @@ background-repeat: no-repeat;
 height: 176px;
 background-repeat: no-repeat;
 }
-   
+/* why choose us */
+.why-items-container{
+    flex-direction: column;
+} 
+.contain-item-one , .contain-item-two , .contain-item-three {
+    width: 335px;
+height: 289px;
+margin-left: 32px;
+}
+
+
 
 }
