--- a/styles/style.css
+++ b/styles/style.css
@@ -223,6 +223,7 @@ background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.
   
 }
 .contain-item-one{
+    padding-top: 24px;
     width: 573px;
     height: 284px; 
     padding-left: 32px;
@@ -231,6 +232,7 @@ border: 1px solid rgba(251, 181, 99, 0.20);
 background: rgba(251, 181, 99, 0.05);
 }
 .contain-item-two{
+    padding-top: 24px;
     width: 573px;
     height: 284px;
     padding-left: 32px;
@@ -240,13 +242,12 @@ background: rgba(41, 206, 246, 0.05);
 }
 .why-items-container-two{
    margin-top: 24px;
-   margin-right: auto;
-   margin-left: auto;
-   align-items: center;
+ display: flex;
+ justify-content: center;
    
 }
 .contain-item-three{
-    
+    padding-top: 24px;
     width: 573px;
     height: 284px; 
     padding-left: 32px;
@@ -263,7 +264,7 @@ h1{
 .newsletter-container{
     max-width: 1170px;
     margin: 0 auto;  
-    margin-top: 32px;
+    margin-top: 102px;
     display: flex;
     gap: 24px;
 }
@@ -311,21 +312,49 @@ background: url('../Images/Rectangle\ 8\ \(1\).png'), lightgray 50% / cover no-r
     border-radius: 16px;
 background: #FF5400;
 }
-.h5{
+.h4{
     color: #FFF;   
     font-size: 24px;
     font-weight: 400;
 }
 .save{
+    padding-bottom: 6px;
     color: #FFF;   
     font-size: 32px;
     font-weight: 800;
 }
+footer{
+    background: rgba(19, 19, 24, 0.05);
+    margin-top: 130px;
+}
+.footer-contein{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    align-items: center;
+
+}
+.footer-ds{
+    display: flex;
+    justify-content: center;
+}
+.footer-social{
+    margin-top: 24px;
+    display: flex;
+    justify-content: center;
+  gap: 32px;
+  padding-bottom: 24px;
+}
+.footer-social a{
+    color: #131318;
+}
+.copyright{
+    display: flex;
+    justify-content: center;
+}
 
 
-
-
-
+/* responsive area */
 
 
 @media screen and (max-width:600px) {
@@ -335,10 +364,23 @@ background: #FF5400;
 #check-btn{
     display: block;
 }
+/* explore responsive area */
    .explore-container{
     width: 100%;
     height: 500px;
     border-radius: 16px;
+   }
+   .explore-items .explore-tittle{
+    font-size: 24px;
+   }
+   .explore-input-items{
+    height: auto;
+    margin-left: 100px;
+   }
+   .input , .button{
+    width: 180px;
+    height: 40px;
+    margin-left: 40px;
    }
    .explore-items{
     padding-top: 25px;
@@ -357,6 +399,7 @@ background: #FF5400;
    gap: 16px; 
    
    }
+   /* popular  */
    .our-popular{
     display: flex;
     flex-direction: column;
@@ -369,12 +412,16 @@ background: #FF5400;
 }
 .img-row-two{
 grid-template-columns: 1fr;
-
+background-size: cover;
 background-repeat: no-repeat;
+
+}
+.city{
+    font-weight: 300;
 }
 .img-3 , .img-4 , .img-5 , .img-6{
     width:100%;
-height: 176px;
+height: 190px;
 background-repeat: no-repeat;
 }
 /* why choose us */
@@ -395,8 +442,7 @@ width: 100%;
 }
 .top{
     position: relative;
-    
-    left: 200px;
+     left: 200px;
 }
 
 
