--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@ nav  .nav-about  a{
     font-weight: 400;
 }
 /* end nav */
+
 /* explore travels styles */
 .explore-container{
     width: 1170px;
@@ -103,6 +104,7 @@ color: #FFF;
 font-size: 16px;
 font-weight: 700;
 }
+
 /* our popular tour  */
 .our-popular{
    
@@ -134,6 +136,7 @@ font-weight: 700;
 height: 550px;
     border-radius: 16px; 
 }
+
 /* choese your destinaition */
 .yours-destination{
     max-width: 1170px;
@@ -207,6 +210,7 @@ height: 300px;
 border-radius: 16px;
 background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url('../Images/Rectangle\ 10.png'), lightgray 50% / cover no-repeat;
 }
+
 /* why chose us */
 .why-chose-us{
     max-width: 1170px;
@@ -260,6 +264,7 @@ h1{
     font-size: 40px;
     font-weight: 800;
 }
+
 /* newsletter  */
 .newsletter-container{
     max-width: 1170px;
@@ -323,9 +328,10 @@ background: #FF5400;
     font-size: 32px;
     font-weight: 800;
 }
+/* footer */
 footer{
     background: rgba(19, 19, 24, 0.05);
-    margin-top: 130px;
+    margin-top: 100px;
 }
 .footer-contein{
     display: flex;
@@ -357,7 +363,7 @@ footer{
 /* responsive area */
 
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:576px) {
 .nav-about{
     display: none;
 }
@@ -407,31 +413,31 @@ footer{
    /* chose your destination */
    .img-row , .img-row-three{
     flex-direction: column;
-   
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 .img-row-two{
 grid-template-columns: 1fr;
-background-size: cover;
+
 background-repeat: no-repeat;
 
 }
-.city{
-    font-weight: 300;
-}
+
 .img-3 , .img-4 , .img-5 , .img-6{
-    width:100%;
-height: 190px;
+   background-size: cover;
+   background-position: center;
 background-repeat: no-repeat;
+margin: auto;
+
 }
 /* why choose us */
 .why-items-container{
     flex-direction: column;
 } 
 .contain-item-one , .contain-item-two , .contain-item-three {
-    width: 335px;
-height: 289px;
-margin-left: 32px;
+    background-size: cover;
+
 }
 /*  newslatter */
 .newsletter-container{
@@ -444,6 +450,4 @@ width: 100%;
     position: relative;
      left: 200px;
 }
-
-
 }
